--- a/pgso_Billing/Forms/Report_Billing_Equipment.rdlc
+++ b/pgso_Billing/Forms/Report_Billing_Equipment.rdlc
@@ -1901,7 +1901,20 @@
                           <Paragraph>
                             <TextRuns>
                               <TextRun>
-                                <Value>=Fields!fld_Control_Number.Value</Value>
+                                <Value />
+                                <Style>
+                                  <FontSize>9pt</FontSize>
+                                </Style>
+                              </TextRun>
+                            </TextRuns>
+                            <Style>
+                              <TextAlign>Left</TextAlign>
+                            </Style>
+                          </Paragraph>
+                          <Paragraph>
+                            <TextRuns>
+                              <TextRun>
+                                <Value />
                                 <Style>
                                   <FontSize>9pt</FontSize>
                                 </Style>
