--- a/pgso_Billing/Forms/Report_Billing_Equipment.rdlc
+++ b/pgso_Billing/Forms/Report_Billing_Equipment.rdlc
@@ -205,6 +205,10 @@
           <DataField>fld_Additional_Charge</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="fld_OT_Hours">
+          <DataField>fld_OT_Hours</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>BillingDataSet</rd:DataSetName>
@@ -461,13 +465,13 @@
                   <Width>0.09056in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.40223in</Width>
+                  <Width>1.41517in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>0.82704in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.93881in</Width>
+                  <Width>1.08223in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>0.70723in</Width>
@@ -479,7 +483,7 @@
                   <Width>1.04164in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.45634in</Width>
+                  <Width>0.29998in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -678,7 +682,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Right</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -779,7 +783,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Right</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -813,7 +817,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Left</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -879,7 +883,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Right</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -905,7 +909,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!fld_Amount_Paid.Value)</Value>
+                                  <Value>=Sum(Code.CalculateTotal(Fields!fld_Reservation_Status.Value, Fields!fld_Equipment_Price.Value, Fields!fld_Quantity.Value, Fields!fld_Equipment_Price_Subsequent.Value, Fields!fld_Number_Of_Days.Value))</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <Format>'₱'#,0.00</Format>
@@ -913,7 +917,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Left</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -948,7 +952,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Right</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -982,7 +986,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Left</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -1050,7 +1054,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Right</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -1169,9 +1173,9 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox35</rd:DefaultName>
-            <Top>2.22569in</Top>
+            <Top>2.48958in</Top>
             <Left>11.13301in</Left>
-            <Height>0.19792in</Height>
+            <Height>0.15625in</Height>
             <Width>0.86698in</Width>
             <ZIndex>7</ZIndex>
             <Style>
@@ -1701,17 +1705,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=IIF(Fields!fld_Payment_Status.Value = "Confirmed",
-    IIF(IsNothing(Fields!fld_Equipment_Price.Value) OR 
-        IsNothing(Fields!fld_Number_Of_Days.Value) OR 
-        IsNothing(Fields!fld_Equipment_Price_Subsequent.Value) OR 
-        IsNothing(Fields!fld_Quantity.Value), 
-        0,
-        (Fields!fld_Equipment_Price.Value * Fields!fld_Quantity.Value) + 
-        (Fields!fld_Equipment_Price_Subsequent.Value * Fields!fld_Quantity.Value * (Fields!fld_Number_Of_Days.Value - 1))
-    ),
-    0
-)</Value>
+                                  <Value>=Code.CalculateTotal(Fields!fld_Reservation_Status.Value, Fields!fld_Equipment_Price.Value, Fields!fld_Quantity.Value, Fields!fld_Equipment_Price_Subsequent.Value, Fields!fld_Number_Of_Days.Value)</Value>
                                   <Style>
                                     <Format>'₱'#,0.00</Format>
                                   </Style>
@@ -1901,20 +1895,7 @@
                           <Paragraph>
                             <TextRuns>
                               <TextRun>
-                                <Value />
-                                <Style>
-                                  <FontSize>9pt</FontSize>
-                                </Style>
-                              </TextRun>
-                            </TextRuns>
-                            <Style>
-                              <TextAlign>Left</TextAlign>
-                            </Style>
-                          </Paragraph>
-                          <Paragraph>
-                            <TextRuns>
-                              <TextRun>
-                                <Value />
+                                <Value>=Fields!fld_Control_Number.Value</Value>
                                 <Style>
                                   <FontSize>9pt</FontSize>
                                 </Style>
@@ -2062,8 +2043,115 @@
               <FontSize>9pt</FontSize>
             </Style>
           </Tablix>
+          <Tablix Name="Tablix1">
+            <TablixBody>
+              <TablixColumns>
+                <TablixColumn>
+                  <Width>1.19823in</Width>
+                </TablixColumn>
+                <TablixColumn>
+                  <Width>1.19823in</Width>
+                </TablixColumn>
+              </TablixColumns>
+              <TablixRows>
+                <TablixRow>
+                  <Height>0.25in</Height>
+                  <TablixCells>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox6">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>OVERALL TOTAL</Value>
+                                  <Style>
+                                    <FontSize>8pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Right</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox6</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox9">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>=Sum(Code.CalculateTotal(Fields!fld_Reservation_Status.Value, Fields!fld_Equipment_Price.Value, Fields!fld_Quantity.Value, Fields!fld_Equipment_Price_Subsequent.Value, Fields!fld_Number_Of_Days.Value))</Value>
+                                  <Style>
+                                    <FontWeight>Bold</FontWeight>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox9</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                  </TablixCells>
+                </TablixRow>
+              </TablixRows>
+            </TablixBody>
+            <TablixColumnHierarchy>
+              <TablixMembers>
+                <TablixMember />
+                <TablixMember />
+              </TablixMembers>
+            </TablixColumnHierarchy>
+            <TablixRowHierarchy>
+              <TablixMembers>
+                <TablixMember />
+              </TablixMembers>
+            </TablixRowHierarchy>
+            <Top>2.2118in</Top>
+            <Left>9.60356in</Left>
+            <Height>0.25in</Height>
+            <Width>2.39643in</Width>
+            <ZIndex>9</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+            </Style>
+          </Tablix>
         </ReportItems>
-        <Height>2.42361in</Height>
+        <Height>2.64583in</Height>
         <Style />
       </Body>
       <Width>12.00002in</Width>
@@ -2270,6 +2358,20 @@
       </CellDefinitions>
     </GridLayoutDefinition>
   </ReportParametersLayout>
+  <Code>Function CalculateTotal(fld_Reservation_Status As String, fld_Equipment_Price As Decimal, fld_Quantity As Integer, fld_Equipment_Price_Subsequent As Decimal, fld_Number_Of_Days As Integer) As Decimal
+    ' If the reservation status is "Pending", return 0 (skip the calculation)
+    If fld_Reservation_Status = "Pending" Then
+        Return 0
+    End If
+
+    ' Check if required fields are Nothing
+    If IsNothing(fld_Equipment_Price) Or IsNothing(fld_Quantity) Or IsNothing(fld_Equipment_Price_Subsequent) Or IsNothing(fld_Number_Of_Days) Then
+        Return 0 ' Return 0 if any required field is null
+    Else
+        ' Perform the calculation for "Confirmed" or other statuses
+        Return (fld_Equipment_Price * fld_Quantity) + (fld_Equipment_Price_Subsequent * fld_Quantity * (fld_Number_Of_Days - 1))
+    End If
+End Function</Code>
   <EmbeddedImages>
     <EmbeddedImage Name="logo_pgso">
       <MIMEType>image/png</MIMEType>
