--- a/pgso_Billing/Forms/Report_Extension_Slip.rdlc
+++ b/pgso_Billing/Forms/Report_Extension_Slip.rdlc
@@ -349,7 +349,7 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>5.2375cm</Top>
+        <Top>5.555cm</Top>
         <Left>2.32437cm</Left>
         <Height>0.81167cm</Height>
         <Width>3.58465cm</Width>
@@ -377,7 +377,7 @@
             <Style />
           </Paragraph>
         </Paragraphs>
-        <Top>8.46139cm</Top>
+        <Top>9.09639cm</Top>
         <Left>2.29792cm</Left>
         <Height>0.4cm</Height>
         <Width>2.87042cm</Width>
@@ -393,10 +393,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.61768cm</Width>
+              <Width>2.33583cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.85039cm</Width>
+              <Width>3.82391cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -493,10 +493,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>9.95882cm</Top>
-        <Left>11.89542cm</Left>
+        <Top>10.59382cm</Top>
+        <Left>11.20375cm</Left>
         <Height>0.5cm</Height>
-        <Width>5.46807cm</Width>
+        <Width>6.15974cm</Width>
         <ZIndex>9</ZIndex>
         <Style>
           <Border>
@@ -509,13 +509,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>6.23319cm</Width>
+              <Width>5.54152cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>2.54cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.64416cm</Width>
+              <Width>2.33583cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>3.82391cm</Width>
@@ -569,7 +569,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Hourly Rate</Value>
+                              <Value>Hours Extended</Value>
                               <Style>
                                 <FontFamily>Calibri</FontFamily>
                                 <FontSize>9pt</FontSize>
@@ -604,7 +604,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Hours</Value>
+                              <Value>Rate per Hour</Value>
                               <Style>
                                 <FontFamily>Calibri</FontFamily>
                                 <FontSize>9pt</FontSize>
@@ -706,21 +706,22 @@
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="fld_Hourly_Rate">
-                      <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!fld_Hourly_Rate.Value</Value>
+                              <Value>=Fields!fld_OT_Hours.Value</Value>
                               <Style>
                                 <FontFamily>Calibri</FontFamily>
                                 <FontSize>9pt</FontSize>
-                                <Format>'₱'#,0.00;('₱'#,0.00)</Format>
+                                <Format>0;(0)</Format>
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>fld_Hourly_Rate</rd:DefaultName>
@@ -729,13 +730,14 @@
                           <Color>LightGrey</Color>
                           <Style>Solid</Style>
                         </Border>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
                         <PaddingBottom>2pt</PaddingBottom>
-                        <rd:FormatSymbolCulture>en-PH</rd:FormatSymbolCulture>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -747,10 +749,11 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!fld_OT_Hours.Value</Value>
+                              <Value>=Fields!fld_Hourly_Rate.Value</Value>
                               <Style>
                                 <FontFamily>Calibri</FontFamily>
                                 <FontSize>9pt</FontSize>
+                                <Format>'₱'#,0.00;('₱'#,0.00)</Format>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -770,6 +773,7 @@
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
                         <PaddingBottom>2pt</PaddingBottom>
+                        <rd:FormatSymbolCulture>en-PH</rd:FormatSymbolCulture>
                       </Style>
                     </Textbox>
                   </CellContents>
@@ -792,7 +796,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox53</rd:DefaultName>
@@ -801,6 +807,7 @@
                           <Color>LightGrey</Color>
                           <Style>Solid</Style>
                         </Border>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>5pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -832,7 +839,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>8.95882cm</Top>
+        <Top>9.59382cm</Top>
         <Left>3.12223cm</Left>
         <Height>1cm</Height>
         <Width>14.24126cm</Width>
@@ -865,7 +872,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>10.62683cm</Top>
+        <Top>11.26183cm</Top>
         <Left>2.35084cm</Left>
         <Height>0.635cm</Height>
         <Width>3.92875cm</Width>
@@ -911,7 +918,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>12.05875cm</Top>
+        <Top>12.69375cm</Top>
         <Left>4.00403cm</Left>
         <Height>0.89958cm</Height>
         <Width>4.7625cm</Width>
@@ -945,7 +952,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>10.62683cm</Top>
+        <Top>11.26183cm</Top>
         <Left>11.78039cm</Left>
         <Height>0.635cm</Height>
         <Width>1.75917cm</Width>
@@ -997,7 +1004,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>12.05875cm</Top>
+        <Top>12.69375cm</Top>
         <Left>13.6952cm</Left>
         <Height>0.89958cm</Height>
         <Width>3.66828cm</Width>
@@ -1076,7 +1083,7 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>6.52014cm</Top>
+        <Top>7.15514cm</Top>
         <Left>2.32437cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
@@ -1108,7 +1115,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!fld_Full_Name.Value</Value>
+                              <Value>=UCase(Fields!fld_Full_Name.Value)</Value>
                               <Style>
                                 <FontFamily>Calibri</FontFamily>
                                 <FontSize>9pt</FontSize>
@@ -1151,7 +1158,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>6.52014cm</Top>
+        <Top>7.15514cm</Top>
         <Left>6.35895cm</Left>
         <Height>0.4cm</Height>
         <Width>11.00452cm</Width>
@@ -1181,7 +1188,7 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>6.92014cm</Top>
+        <Top>7.55514cm</Top>
         <Left>2.32437cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
@@ -1256,7 +1263,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>6.92014cm</Top>
+        <Top>7.55514cm</Top>
         <Left>6.35895cm</Left>
         <Height>0.4cm</Height>
         <Width>11.00452cm</Width>
@@ -1286,7 +1293,7 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>7.68486cm</Top>
+        <Top>8.31986cm</Top>
         <Left>2.32437cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
@@ -1305,7 +1312,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>6.48896cm</Width>
+              <Width>11.00454cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1367,10 +1374,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>7.68486cm</Top>
+        <Top>8.31986cm</Top>
         <Left>6.35895cm</Left>
         <Height>0.4cm</Height>
-        <Width>6.48896cm</Width>
+        <Width>11.00454cm</Width>
         <ZIndex>22</ZIndex>
         <Style>
           <Border>
@@ -1397,7 +1404,7 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>7.32014cm</Top>
+        <Top>7.95514cm</Top>
         <Left>2.32437cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
@@ -1472,166 +1479,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>7.32014cm</Top>
+        <Top>7.95514cm</Top>
         <Left>6.35895cm</Left>
         <Height>0.4cm</Height>
         <Width>11.00452cm</Width>
         <ZIndex>24</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-            <Width>0.25pt</Width>
-          </Border>
-        </Style>
-      </Tablix>
-      <Tablix Name="Tablix14">
-        <TablixBody>
-          <TablixColumns>
-            <TablixColumn>
-              <Width>2.73813cm</Width>
-            </TablixColumn>
-          </TablixColumns>
-          <TablixRows>
-            <TablixRow>
-              <Height>0.4cm</Height>
-              <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="fld_Requesting_Person_Address9">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=IIf(Fields!fld_Reservation_Type.Value = "Equipment", "Number of Days: ", "Number of Hours: ")</Value>
-                              <Style>
-                                <FontFamily>Calibri</FontFamily>
-                                <FontSize>9pt</FontSize>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Right</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <Visibility>
-                        <Hidden>=IIf(Sum(IIf(IsNothing(Fields!fld_Equipment_Name.Value) OR Fields!fld_Quantity.Value = 0, 1, 0)) &gt; 0, False, True)</Hidden>
-                      </Visibility>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>None</Style>
-                        </Border>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-              </TablixCells>
-            </TablixRow>
-          </TablixRows>
-        </TablixBody>
-        <TablixColumnHierarchy>
-          <TablixMembers>
-            <TablixMember />
-          </TablixMembers>
-        </TablixColumnHierarchy>
-        <TablixRowHierarchy>
-          <TablixMembers>
-            <TablixMember>
-              <Group Name="Group_Number_Hours_Or_Days">
-                <GroupExpressions>
-                  <GroupExpression>=Fields!fld_Number_Of_Days.Value</GroupExpression>
-                </GroupExpressions>
-              </Group>
-            </TablixMember>
-          </TablixMembers>
-        </TablixRowHierarchy>
-        <DataSetName>BillingDataset</DataSetName>
-        <Top>7.68486cm</Top>
-        <Left>14.28138cm</Left>
-        <Height>0.4cm</Height>
-        <Width>2.73813cm</Width>
-        <ZIndex>25</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-            <Width>0.25pt</Width>
-          </Border>
-        </Style>
-      </Tablix>
-      <Tablix Name="Tablix10">
-        <TablixBody>
-          <TablixColumns>
-            <TablixColumn>
-              <Width>0.32645cm</Width>
-            </TablixColumn>
-          </TablixColumns>
-          <TablixRows>
-            <TablixRow>
-              <Height>0.4cm</Height>
-              <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="fld_Requesting_Person_Address4">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Fields!fld_OT_Hours.Value</Value>
-                              <Style>
-                                <FontFamily>Calibri</FontFamily>
-                                <FontSize>9pt</FontSize>
-                                <Format>0;0-</Format>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Right</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <Visibility>
-                        <Hidden>=IIf(Sum(IIf(IsNothing(Fields!fld_Equipment_Name.Value) OR Fields!fld_Quantity.Value = 0, 1, 0)) &gt; 0, False, True)</Hidden>
-                      </Visibility>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>None</Style>
-                        </Border>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-              </TablixCells>
-            </TablixRow>
-          </TablixRows>
-        </TablixBody>
-        <TablixColumnHierarchy>
-          <TablixMembers>
-            <TablixMember />
-          </TablixMembers>
-        </TablixColumnHierarchy>
-        <TablixRowHierarchy>
-          <TablixMembers>
-            <TablixMember>
-              <Group Name="Group_Hours_Or_Days">
-                <GroupExpressions>
-                  <GroupExpression>=Fields!fld_Number_Of_Days.Value</GroupExpression>
-                </GroupExpressions>
-              </Group>
-            </TablixMember>
-          </TablixMembers>
-        </TablixRowHierarchy>
-        <DataSetName>BillingDataset</DataSetName>
-        <Top>7.68486cm</Top>
-        <Left>17.03702cm</Left>
-        <Height>0.4cm</Height>
-        <Width>0.32645cm</Width>
-        <ZIndex>26</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
